2003-12-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/api.html doc/api_misc.html
    Add documentation for conversions functions.

    * doc/faq.html
    Add Q/A about detecting presence of libsamplerate.

2003-12-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.h src/samplerate.c
    Added functions for short->float and float->short conversions on arrays
    of data. This will make it a little easier for people who need the
    input or output data in shorts rather than floats.

    * configure.ac
    Added tests for CPU clipping mode which was required for the float to
    short conversion.

    * tests/float_short_test.c
    New code for testing the new functionality.

2003-10-28  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_zoh.c src/src_linear.c
    Fixed an off-by-one indexing issue which was causing distortion at the
	boundaries between calls to src_process().

    * tests/multi_channel_test.c
    Finally passing tests for all three access methods (simple, process and
	callback).

2003-10-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/calc_snr.c
    SNR calculation was being screwed up because the peak detector was 
    mistaking side lobes caused by the windowded FFT as noise/aliasing peaks.
    Therefore added code to wipe out the troughs between peaks which erases
    the side lobe peaks without affecting the noise/aliasing peaks.

    * tests/multi_channel_test.c
    Added a callback_test to work on multiple channels.

2003-10-14  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.h
    Add definitions for the callback based API (src_callback_new and
    src_callback_read).

    * doc/*.html
    Add link to faq.html.

    * doc/faq.html
    Add a new question/answer.

    * src/samplerate.c tests/callback_test.c
    Move callback functions (src_callback_new and src_callback_read) from
    callback_test.c to samplerate.c