@@ -1,2 +1,9 @@
 EXTRA_DIST = Makefile.msvc config.h unistd.h libsamplerate.def
   
+
+## Do not edit or modify anything in this comment block.
+## The arch-tag line is a file identity tag for the GNU Arch 
+## revision control system.
+##
+## arch-tag: fcba51ab-858b-462c-9954-66fee32b7f8f
+
