@@ -1,4 +1,4 @@
-# Copyright (C) 2002,2003 Erik de Castro Lopo (erikd AT mega-nerd DOT com).
+# Copyright (C) 2002-2004 Erik de Castro Lopo (erikd AT mega-nerd DOT com).
 
 dnl Require autoconf version >= 2.54)
 AC_PREREQ(2.54)
